# operate

./: .gitignore  README.md  operate.pins.toml  pyproject.toml
.pi/: settings.json
.pi/skills/market-report/: SKILL.md
config/: holdings.example.toml  operate.example.toml
launchd/: com.kristianernst.operate.market-report.plist.template
scripts/: bootstrap_pi.py
src/operate/: __init__.py  bootstrap.py  cli.py  config.py  pi.py  reports.py  scheduler.py
tests/: test_config.py  test_pi.py  test_reports.py  test_scheduler.py
