[project]
name = "operate"
version = "0.1.0"
description = "Personal Pi-first control plane for scheduled agent workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
operate = "operate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/operate"]
